--- a/expo-starter/package.json
+++ b/expo-starter/package.json
@@ -15,6 +15,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@expo/config-plugins": "~10.1.1",
     "@expo/prebuild-config": "~9.0.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/drawer": "^7.3.9",
     "clsx": "^2.1.1",
     "expo": "~53.0.0",
